// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`matches snapshot 1`] = `
.c4 {
  margin-left: 0.5rem;
  color: #FFFFFF;
  border-radius: 0.25rem;
  display: inline-block;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.25rem;
  text-align: center;
  text-transform: uppercase;
  vertical-align: middle;
  padding: 0 0.5rem;
  background-color: #5E637A;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  align-content: stretch;
  align-items: center;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c3 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c5 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c5:last-child {
  margin-bottom: 0;
}

.c2 {
  margin-inline-end: 0.5rem;
  object-fit: contain;
  flex-shrink: 0;
}

@media (min-width: 0px) {
  .c1 {
    flex-direction: column;
  }
}

@media (min-width: 720px) {
  .c1 {
    flex-direction: row;
  }
}

<div
  class="c0 c1"
>
  <img
    alt="Logo"
    class="c2"
    height="40"
    src="logo.png"
    width="40"
  />
  <div
    class="c0"
  >
    <p
      class="c3"
    >
      Card title
      <span
        class="c4"
      >
        New
      </span>
    </p>
    <p
      class="c5"
    >
      Card description
    </p>
  </div>
</div>
`;

exports[`matches snapshot with object description and link 1`] = `
.c4 {
  margin-left: 0.5rem;
  color: #FFFFFF;
  border-radius: 0.25rem;
  display: inline-block;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.25rem;
  text-align: center;
  text-transform: uppercase;
  vertical-align: middle;
  padding: 0 0.5rem;
  background-color: #5E637A;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  align-content: stretch;
  align-items: center;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c3 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c5 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c5:last-child {
  margin-bottom: 0;
}

.c6 {
  transition: all 70ms ease-out;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  text-decoration: none;
}

.c6:active {
  color: #0024A6;
}

.c6:hover:not(:active) {
  color: #0024A6;
}

.c7 {
  font-size: 0.875rem;
}

.c2 {
  margin-inline-end: 0.5rem;
  object-fit: contain;
  flex-shrink: 0;
}

@media (min-width: 0px) {
  .c1 {
    flex-direction: column;
  }
}

@media (min-width: 720px) {
  .c1 {
    flex-direction: row;
  }
}

<div
  class="c0 c1"
>
  <img
    alt="Logo"
    class="c2"
    height="40"
    src="logo.png"
    width="40"
  />
  <div
    class="c0"
  >
    <p
      class="c3"
    >
      Card title
      <span
        class="c4"
      >
        New
      </span>
    </p>
    <p
      class="c5"
    >
      Card description
       
      <a
        class="c6 c7"
        href="https://example.com"
        target="_blank"
      >
        Learn more
      </a>
    </p>
  </div>
</div>
`;
